<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".addFoodManual.AddFoodManualActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            app:popupTheme="@style/AppTheme"
            android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center|top"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_data_label"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/foodname_input"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/food_name_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/quantity_input"
                android:inputType="number"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutritional_info_100gt"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/calories_input"
                    android:inputType="number"
                    android:layout_marginRight="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:hint="@string/calories_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/prots_input"
                    android:inputType="number"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prots_hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/carbs_input"
                    android:inputType="number"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carbs_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/fats_input"
                    android:inputType="number"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fats_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/food_add_food_manual_btn"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_food"
        android:layout_margin="30dp"/>

</LinearLayout>