<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DiaryFoodDetail.DiaryFoodDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/AppTheme"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">
                    <TextView
                    android:id="@+id/detail_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_string"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/detail_total_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_string"
                        android:layout_marginBottom="10dp"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:textStyle=""/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:id="@+id/detail_quantity"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textAlignment="textEnd"
                android:textStyle="" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/macronutrients"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/proteins"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:id="@+id/detail_proteins"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textAlignment="textEnd"
                android:textStyle="" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:id="@+id/detail_carbs"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textAlignment="textEnd"
                android:textStyle="" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fats"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:id="@+id/detail_fats"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textAlignment="textEnd"
                android:textStyle="" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:layout_margin="20dp"/>

    </LinearLayout>
</LinearLayout>