<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_diaryfood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".diaryFood.DiaryFoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme" />

    <TextView
        android:id="@+id/diary_food_currentday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:text="@string/calories"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calories_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prots_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:text="@string/proteins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prots_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/carbs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:text="@string/carbs"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/carbs_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fats_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:text="@string/fats"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fats_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/diary_food_add_food_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_food"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diary_list"
            app:layoutManager="LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp" />
    </LinearLayout>


</LinearLayout>